Bug 138335 - XSidebar::requestLayout() crashing when called via UNO
Summary: XSidebar::requestLayout() crashing when called via UNO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
6.4.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-19 13:00 UTC by Thorsten Behrens (allotropia)
Modified: 2020-11-20 01:28 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Behrens (allotropia) 2020-11-19 13:00:21 UTC
Description:
Call said function via remote UNO, or from within the office process e.g. from Java.

Good chance you'll get a crash, as many UNO API functions below sfx/source/sidebar are not thread-safe.

Actual Results:
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No



Additional Info:
-
Comment 1 Roman Kuznetsov 2020-11-19 19:11:24 UTC
https://gerrit.libreoffice.org/c/core/+/106169
Comment 2 Commit Notification 2020-11-20 01:28:19 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cdae2f16ef9da75c1b3f9cc3f8abc3a180f324d1

fix tdf#138335 guard sidebar uno methods with SolarMutex

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.