fix tdf#138335 guard sidebar uno methods with SolarMutex

Wasn't threadsafe before; using vcl/gui code, so we need the
SolarMutex.

Conflicts:
        sfx2/source/sidebar/SidebarController.cxx

Change-Id: I3d4407f095837d03ad492fcdf9a08746cf911d25
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106169
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106211
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>