sfx2/source/sidebar/SidebarPanelBase.cxx
@@ -79,6 +79,8 @@ SidebarPanelBase::~SidebarPanelBase()
 
 void SAL_CALL SidebarPanelBase::disposing()
 {
+    SolarMutexGuard aGuard;
+
     mpControl.disposeAndClear();
 
     if (mxFrame.is())
@@ -95,6 +97,8 @@ void SAL_CALL SidebarPanelBase::disposing()
 void SAL_CALL SidebarPanelBase::notifyContextChangeEvent (
     const ui::ContextChangeEventObject& rEvent)
 {
+    SolarMutexGuard aGuard;
+
     IContextChangeReceiver* pContextChangeReceiver
         = dynamic_cast<IContextChangeReceiver*>(mpControl.get());
     if (pContextChangeReceiver != nullptr)
@@ -109,6 +113,8 @@ void SAL_CALL SidebarPanelBase::notifyContextChangeEvent (
 void SAL_CALL SidebarPanelBase::disposing (
     const css::lang::EventObject&)
 {
+    SolarMutexGuard aGuard;
+
     mxFrame = nullptr;
     mpControl = nullptr;
 }
@@ -142,6 +148,8 @@ Reference<accessibility::XAccessible> SAL_CALL SidebarPanelBase::createAccessibl
 
 Reference<awt::XWindow> SAL_CALL SidebarPanelBase::getWindow()
 {
+    SolarMutexGuard aGuard;
+
     if (mpControl != nullptr)
         return Reference<awt::XWindow>(
             mpControl->GetComponentInterface(),
@@ -152,6 +160,8 @@ Reference<awt::XWindow> SAL_CALL SidebarPanelBase::getWindow()
 
 ui::LayoutSize SAL_CALL SidebarPanelBase::getHeightForWidth (const sal_Int32 nWidth)
 {
+    SolarMutexGuard aGuard;
+
     if (maLayoutSize.Minimum >= 0)
         return maLayoutSize;
     else
@@ -178,6 +188,8 @@ ui::LayoutSize SAL_CALL SidebarPanelBase::getHeightForWidth (const sal_Int32 nWi
 
 sal_Int32 SAL_CALL SidebarPanelBase::getMinimalWidth ()
 {
+    SolarMutexGuard aGuard;
+
     if (isLayoutEnabled(mpControl))
     {
         // widget layout-based sidebar
@@ -189,6 +201,8 @@ sal_Int32 SAL_CALL SidebarPanelBase::getMinimalWidth ()
 
 void SAL_CALL SidebarPanelBase::updateModel(const css::uno::Reference<css::frame::XModel>& xModel)
 {
+    SolarMutexGuard aGuard;
+
     SidebarModelUpdate* pModelUpdate = dynamic_cast<SidebarModelUpdate*>(mpControl.get());
     if (!pModelUpdate)
         return;
