sfx2/source/sidebar/Theme.cxx
@@ -347,6 +347,8 @@ void Theme::UpdateTheme()
 
 void SAL_CALL Theme::disposing()
 {
+    SolarMutexGuard aGuard;
+
     ChangeListeners aListeners;
     aListeners.swap(maChangeListeners);
 
@@ -381,6 +383,8 @@ void SAL_CALL Theme::setPropertyValue (
     const OUString& rsPropertyName,
     const css::uno::Any& rValue)
 {
+    SolarMutexGuard aGuard;
+
     PropertyNameToIdMap::const_iterator iId (maPropertyNameToIdMap.find(rsPropertyName));
     if (iId == maPropertyNameToIdMap.end())
         throw beans::UnknownPropertyException(rsPropertyName);
@@ -423,6 +427,8 @@ void SAL_CALL Theme::setPropertyValue (
 Any SAL_CALL Theme::getPropertyValue (
     const OUString& rsPropertyName)
 {
+    SolarMutexGuard aGuard;
+
     PropertyNameToIdMap::const_iterator iId (maPropertyNameToIdMap.find(rsPropertyName));
     if (iId == maPropertyNameToIdMap.end())
         throw beans::UnknownPropertyException(rsPropertyName);
@@ -440,6 +446,8 @@ void SAL_CALL Theme::addPropertyChangeListener(
     const OUString& rsPropertyName,
     const css::uno::Reference<css::beans::XPropertyChangeListener>& rxListener)
 {
+    SolarMutexGuard aGuard;
+
     ThemeItem eItem (AnyItem_);
     if (rsPropertyName.getLength() > 0)
     {
@@ -462,6 +470,8 @@ void SAL_CALL Theme::removePropertyChangeListener(
     const OUString& rsPropertyName,
     const css::uno::Reference<css::beans::XPropertyChangeListener>& rxListener)
 {
+    SolarMutexGuard aGuard;
+
     ThemeItem eItem (AnyItem_);
     if (rsPropertyName.getLength() > 0)
     {
@@ -494,6 +504,8 @@ void SAL_CALL Theme::addVetoableChangeListener(
     const OUString& rsPropertyName,
     const css::uno::Reference<css::beans::XVetoableChangeListener>& rxListener)
 {
+    SolarMutexGuard aGuard;
+
     ThemeItem eItem (AnyItem_);
     if (rsPropertyName.getLength() > 0)
     {
@@ -516,6 +528,8 @@ void SAL_CALL Theme::removeVetoableChangeListener(
     const OUString& rsPropertyName,
     const css::uno::Reference<css::beans::XVetoableChangeListener>& rxListener)
 {
+    SolarMutexGuard aGuard;
+
     ThemeItem eItem (AnyItem_);
     if (rsPropertyName.getLength() > 0)
     {
@@ -545,6 +559,8 @@ void SAL_CALL Theme::removeVetoableChangeListener(
 
 css::uno::Sequence<css::beans::Property> SAL_CALL Theme::getProperties()
 {
+    SolarMutexGuard aGuard;
+
     ::std::vector<beans::Property> aProperties;
 
     sal_Int32 const nEnd(End_);
@@ -570,6 +586,8 @@ css::uno::Sequence<css::beans::Property> SAL_CALL Theme::getProperties()
 
 beans::Property SAL_CALL Theme::getPropertyByName (const OUString& rsPropertyName)
 {
+    SolarMutexGuard aGuard;
+
     PropertyNameToIdMap::const_iterator iId (maPropertyNameToIdMap.find(rsPropertyName));
     if (iId == maPropertyNameToIdMap.end())
         throw beans::UnknownPropertyException(rsPropertyName);
@@ -589,6 +607,8 @@ beans::Property SAL_CALL Theme::getPropertyByName (const OUString& rsPropertyNam
 
 sal_Bool SAL_CALL Theme::hasPropertyByName (const OUString& rsPropertyName)
 {
+    SolarMutexGuard aGuard;
+
     PropertyNameToIdMap::const_iterator iId (maPropertyNameToIdMap.find(rsPropertyName));
     if (iId == maPropertyNameToIdMap.end())
         return false;
